fixed image not stretching properly

--- a/memorycard/src/App.css
+++ b/memorycard/src/App.css
@@ -31,9 +31,8 @@
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   max-height: 100px;
-  border-radius: 10px;
 }
 
 .card{
